[gd_scene load_steps=7 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://player_scene" path="res://scenes/player.tscn" id="2_player"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="3_ui"]
[ext_resource type="PackedScene" uid="uid://ui_scene" path="res://scenes/ui.tscn" id="4_ui"]
[ext_resource type="Texture2D" path="res://assets/textures/star.png" id="5_star"]
[ext_resource type="Texture2D" path="res://assets/textures/light_01.png" id="6_small"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.02, 0.02, 0.08, 1)
ambient_light_source = 2
ambient_light_color = Color(0.2, 0.2, 0.4, 1)
glow_enabled = true
glow_intensity = 0.6
glow_strength = 1.1
glow_bloom = 0.3
glow_blend_mode = 0
fog_enabled = true
fog_light_color = Color(0.1, 0.15, 0.25, 1)
fog_density = 0.002

[sub_resource type="Theme" id="Theme_1"]
default_font_size = 20

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.02, 0.02, 0.08, 1)

[node name="Stars" type="Node2D" parent="."]

[node name="Star1" type="Sprite2D" parent="Stars"]
position = Vector2(100, 100)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_star")
modulate = Color(0.5, 0.5, 0.8, 0.8)

[node name="Star2" type="Sprite2D" parent="Stars"]
position = Vector2(300, 200)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_small")

[node name="Star3" type="Sprite2D" parent="Stars"]
position = Vector2(500, 150)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_star")
modulate = Color(0.6, 0.6, 1, 0.7)

[node name="Star4" type="Sprite2D" parent="Stars"]
position = Vector2(700, 300)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_small")

[node name="Star5" type="Sprite2D" parent="Stars"]
position = Vector2(900, 100)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_star")

[node name="Star6" type="Sprite2D" parent="Stars"]
position = Vector2(1100, 250)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_small")

[node name="Star7" type="Sprite2D" parent="Stars"]
position = Vector2(200, 400)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_star")
modulate = Color(0.7, 0.7, 0.9, 0.6)

[node name="Star8" type="Sprite2D" parent="Stars"]
position = Vector2(450, 500)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_small")

[node name="Star9" type="Sprite2D" parent="Stars"]
position = Vector2(650, 450)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_star")

[node name="Star10" type="Sprite2D" parent="Stars"]
position = Vector2(850, 550)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_small")

[node name="Star11" type="Sprite2D" parent="Stars"]
position = Vector2(1050, 400)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_star")
modulate = Color(0.5, 0.5, 0.8, 0.8)

[node name="Star12" type="Sprite2D" parent="Stars"]
position = Vector2(1200, 600)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_small")

[node name="FlowLines" type="Node2D" parent="."]

[node name="ObstacleContainer" type="Node2D" parent="."]

[node name="CollectibleContainer" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(200, 360)

[connection signal="collected" from="Player" to="." method="_on_player_collected"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_ui")

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.2, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Score: 0"

[node name="SpeedLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 55.0
offset_right = 280.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Speed: 300 m/s"

[node name="MessageLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 250.0
offset_right = 200.0
offset_bottom = 350.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
text = "Click to Start!"
autowrap_mode = 2

[node name="GameOverPanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 36
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Press SPACE to Restart"
horizontal_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")
